Adding Data Visualisations and NaN/Negative Values Check

--- a/Assignment 1_Perceptron/Assignment1_DLF.ipynb
+++ b/Assignment 1_Perceptron/Assignment1_DLF.ipynb
@@ -345,14 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The dataset does not contain infinite values.\n"
+      "The dataset does not contain infinite values.\n",
+      "\n",
+      "The column 'Pregnancies' does not contain negative values.\n",
+      "The column 'Glucose' does not contain negative values.\n",
+      "The column 'BloodPressure' does not contain negative values.\n",
+      "The column 'SkinThickness' does not contain negative values.\n",
+      "The column 'Insulin' does not contain negative values.\n",
+      "The column 'BMI' does not contain negative values.\n",
+      "The column 'DiabetesPedigreeFunction' does not contain negative values.\n",
+      "The column 'Age' does not contain negative values.\n",
+      "The column 'Outcome' does not contain negative values.\n"
      ]
     }
    ],
@@ -360,9 +370,19 @@
     "has_inf = np.isinf(raw_data).values.any()\n",
     "\n",
     "if has_inf:\n",
-    "    print(\"The dataset contains infinite values.\")\n",
+    "    print(\"The dataset contains infinite values.\\n\")\n",
     "else:\n",
-    "    print(\"The dataset does not contain infinite values.\")"
+    "    print(\"The dataset does not contain infinite values.\\n\")\n",
+    "\n",
+    "# Check for negative values in each column\n",
+    "negative_values = raw_data.lt(0).any()\n",
+    "\n",
+    "# Print the columns that contain negative values\n",
+    "for column, has_negative in negative_values.items():\n",
+    "    if has_negative:\n",
+    "        print(f\"The column '{column}' contains negative values.\")\n",
+    "    else:\n",
+    "        print(f\"The column '{column}' does not contain negative values.\")"
    ]
   },
   {
