--- a/Assignment 1_Perceptron/Assignment1_DLF.ipynb
+++ b/Assignment 1_Perceptron/Assignment1_DLF.ipynb
@@ -1481,13 +1481,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Metrics for the Baseline Perceptron model on test set:\n",
+      "Accuracy: 0.6494\n",
+      "Precision: 0.5000\n",
+      "Recall: 0.2963\n",
+      "F1 Score: 0.3721\n",
+      "F10 Score: 0.2975\n",
+      "AUC: N/A (y_pred_proba not provided)\n",
+      "\n",
+      "Metrics for the Baseline Perceptron model on test set:\n",
       "Accuracy: 0.6234\n",
       "Precision: 0.4688\n",
       "Recall: 0.5556\n",
@@ -1498,8 +1507,13 @@
     }
    ],
    "source": [
-    "predictions = perceptron_final.predict(X_test_scaled)\n",
-    "metrics = calculate_metrics(Y_test, predictions)\n"
+    "print(\"Metrics for the Baseline Perceptron model on test set:\")\n",
+    "baseline_predictions = my_perceptron.predict(X_test)\n",
+    "metrics = calculate_metrics(Y_test, baseline_predictions)\n",
+    "\n",
+    "print(\"\\nMetrics for the Baseline Perceptron model on test set:\")\n",
+    "sigmoid_predictions = perceptron_final.predict(X_test_scaled)\n",
+    "metrics = calculate_metrics(Y_test, sigmoid_predictions)\n"
    ]
   }
  ],
