--- a/Assignment 1_Perceptron/Assignment1_DLF.ipynb
+++ b/Assignment 1_Perceptron/Assignment1_DLF.ipynb
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
       "F10 Score: 0.2975\n",
       "AUC: N/A (y_pred_proba not provided)\n",
       "\n",
-      "Metrics for the Baseline Perceptron model on test set:\n",
+      "Metrics for the Sigmoid Perceptron model on test set:\n",
       "Accuracy: 0.6234\n",
       "Precision: 0.4688\n",
       "Recall: 0.5556\n",
@@ -1471,7 +1471,7 @@
     "baseline_predictions = my_perceptron.predict(X_test)\n",
     "metrics = calculate_metrics(Y_test, baseline_predictions)\n",
     "\n",
-    "print(\"\\nMetrics for the Baseline Perceptron model on test set:\")\n",
+    "print(\"\\nMetrics for the Sigmoid Perceptron model on test set:\")\n",
     "sigmoid_predictions = perceptron_final.predict(X_test_scaled)\n",
     "metrics = calculate_metrics(Y_test, sigmoid_predictions)\n"
    ]
